<resources>

    <string name="app_name">Event Alert</string>

    <string name="geo_api_key">GOOGLE_API_KEY</string>

    <string name="message_registration_successful">Registration successful</string>
    <string name="message_profile_updated">Profile updated</string>
    <string name="message_subscription_created">Subscription created</string>
    <string name="message_subscription_updated">Subscription updated</string>
    <string name="message_subscription_deleted">Subscription deleted</string>
    <string name="message_event_reported">Event successfully reported</string>
    <string name="message_comment_posted">Comment posted</string>
    <string name="message_order_not_applied">Order not applied</string>
    <string name="message_back_twice">Press back again to exit</string>
    <string name="message_default_error">An error has occurred</string>
    <string name="message_timeout_error">Connection timeout</string>
    <string name="message_authorization_error">Authorization error</string>
    <string name="message_authorization_expired_error">Authorization expired, please re-login</string>
    <string name="message_google_service_not_available">Google services not available</string>
    <string name="message_firebase_token">Could not retrieve Firebase token</string>
    <string name="message_firebase_instance">Firebase messaging is not enabled</string>
    <string name="message_no_events_found">No events found</string>
    <string name="message_location_not_set">The location is mandatory</string>
    <string name="message_permission_location">Location permission required</string>
    <string name="message_permission_notifications">Push notifications permission required</string>
    <string name="message_permission_camera">Camera permission required</string>
    <string name="message_permission_media">Media permission required</string>

    <string name="message_email_required">The email is required</string>
    <string name="message_invalid_email">Invalid email</string>
    <string name="message_email_length">The email must have at most %d characters</string>
    <string name="message_password_required">The password is required</string>
    <string name="message_password_length">The password must have between %d and %d characters</string>
    <string name="message_confirmation_password_required">The confirmation password is required</string>
    <string name="message_different_passwords">The passwords do not match</string>

    <string name="message_first_name_required">The first name is required</string>
    <string name="message_first_name_length">The first name must not exceed %d characters</string>
    <string name="message_last_name_required">The last name is required</string>
    <string name="message_last_name_length">The last name must not exceed %d characters</string>
    <string name="message_phone_number_format">The phone number does not match the expected format</string>

    <string name="message_type_required">The type is required</string>
    <string name="message_severity_required">The severity is required</string>
    <string name="message_status_required">The status is required</string>
    <string name="message_image_required">The image is required</string>
    <string name="message_min_impact_radius">The impact radius must be greater or equal to %d</string>
    <string name="message_max_impact_radius">The impact radius must be less or equal to %d</string>
    <string name="message_impact_radius_decimals">The impact radius must have up to 2 decimals</string>
    <string name="message_description_length">The description must not exceed %d characters</string>
    <string name="message_profile_full_name_required">The profile first name and last name are required</string>
    <string name="message_profile_phone_number_required">The profile phone number is required</string>

    <string name="message_radius_required">The radius is required</string>
    <string name="message_min_radius">The radius must be greater or equal to %d</string>
    <string name="message_max_radius">The radius must be less or equal to %d</string>
    <string name="message_start_date_required">The start date is required</string>
    <string name="message_end_date_required">The end date is required</string>
    <string name="message_start_date_after_end_date">The end date must be after the start date</string>
    <string name="message_dates_years_interval">The time interval must not exceed %d years</string>
    <string name="message_min_type_required">At least one type is required</string>
    <string name="message_min_severity_required">At least one severity is required</string>
    <string name="message_min_status_required">At least one status is required</string>

    <string name="message_comment_required">The comment is required</string>
    <string name="message_comment_length">The comment must not exceed %d characters</string>

    <string name="header_title_types">Types</string>
    <string name="header_title_severities">Severities</string>
    <string name="header_title_statuses">Statuses</string>
    <string name="header_title_report_event">Report new event</string>
    <string name="header_title_select_type">Select type</string>
    <string name="header_title_select_severity">Select severity</string>
    <string name="header_title_select_status">Select status</string>
    <string name="header_title_filter">Filter options</string>
    <string name="header_title_event_details">Event details</string>
    <string name="header_title_see_on_map">Event location</string>
    <string name="header_notifications_settings">Notifications settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_new_event">New event</string>
    <string name="button_validate">Validate</string>
    <string name="button_logout">Logout</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_map">Map</string>
    <string name="menu_item_list">List</string>
    <string name="menu_item_location">Location</string>
    <string name="menu_item_sort">Sort</string>
    <string name="info_item_total_events_displayed">%d events displayed</string>
    <string name="info_item_total_events">%d total events</string>
    <string name="info_item_pages">Page %d/%d</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_reporter">Reporter</string>
    <string name="menu_item_admin">Admin</string>
    <string name="menu_item_notifications">Alerts</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_next">Next</string>
    <string name="menu_item_previous">Previous</string>
    <string name="filter_radius">Radius (km) *</string>
    <string name="filter_start_date">Start date *</string>
    <string name="filter_end_date">End date *</string>
    <string name="filter_types">Types *</string>
    <string name="filter_severities">Severities *</string>
    <string name="filter_statuses">Statuses *</string>
    <string name="filter_selected_types">%d types selected</string>
    <string name="filter_selected_severities">%d severities selected</string>
    <string name="filter_selected_statuses">%d statuses selected</string>
    <string name="all_types">All types (%d)</string>
    <string name="all_severities">All severities (%d)</string>
    <string name="all_statuses">All statuses (%d)</string>
    <string name="distance_km_away_from_user">%d km away from your location</string>
    <string name="distance_m_away_from_user">%d m away from your location</string>
    <string name="impact_radius_km">%s km impact radius</string>
    <string name="no_results">No results</string>
    <string name="no_comments">No comments</string>
    <string name="event_report_type">Type *</string>
    <string name="event_report_severity">Severity *</string>
    <string name="event_report_status">Status *</string>
    <string name="event_report_impact_radius">Impact radius (km)</string>
    <string name="event_report_description">Description</string>
    <string name="none">None</string>
    <string name="source_camera">Camera</string>
    <string name="source_gallery">Gallery</string>
    <string name="select_source">Select source</string>
    <string name="role_user">User</string>
    <string name="role_admin">Admin</string>
    <string name="profile_user_email">Email</string>
    <string name="profile_user_password">Password</string>
    <string name="profile_user_reports_number">Reports number</string>
    <string name="profile_user_first_name">First name *</string>
    <string name="profile_user_last_name">Last name *</string>
    <string name="profile_user_date_of_birth">Date of birth</string>
    <string name="profile_user_phone_number">Phone number</string>
    <string name="profile_user_roles">Roles</string>
    <string name="profile_user_join_date">Join date</string>
    <string name="type_your_comment">Type your comment…</string>
    <string name="reported_by">Reported by %s</string>
    <string name="notifications_settings_toggle">Receive push notifications</string>
    <string name="notifications_settings_radius">Radius (km)</string>
    <string name="notifications_settings_current_location">Current subscription location is %s.</string>
    <string name="notifications_settings_new_location">Subscribe to receive push notifications when events are reported near %s.</string>
    <string name="notifications_with_new">%d notifications, %d not read</string>

</resources>
