<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainMenuHome"
        android:icon="@drawable/menu_item_home"
        android:title="@string/menu_item_home" />

    <item
        android:id="@+id/mainMenuReporter"
        android:icon="@drawable/menu_item_reporter"
        android:title="@string/menu_item_reporter" />

    <item
        android:id="@+id/mainMenuNotifications"
        android:icon="@drawable/menu_item_notifications"
        android:title="@string/menu_item_notifications" />

    <item
        android:id="@+id/mainMenuProfile"
        android:icon="@drawable/menu_item_profile"
        android:title="@string/menu_item_profile" />

    <item
        android:id="@+id/mainMenuAdmin"
        android:icon="@drawable/menu_item_admin"
        android:title="@string/menu_item_admin" />

</menu>