<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profilePhotoCardView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="80dp"
                app:cardPreventCornerOverlap="false">

                <ImageView
                    android:id="@+id/profilePhotoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/item_placeholder_padding" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileEmailTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="test@test.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profilePasswordTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="********" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileFirstNameTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileFirstNameTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="Alan" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileLastNameTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileLastNameTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="Walter" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_date_of_birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileDateOfBirthTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="25/10/1985" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profilePhoneNumberTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profilePhoneNumberTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="+40700123456" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_join_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileJoinDateTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="05/10/2020" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_reports_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileReportsNumberTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="12" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/profile_user_roles">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileRolesTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textSize="@dimen/profile_text_size"
                    tools:text="Admin, Basic" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profileLogoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/icon_logout"
            android:tint="@color/colorPrimary"
            app:fabCustomSize="@dimen/fab_size"
            app:maxImageSize="@dimen/fab_image_size" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profileResetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/icon_reset"
            android:tint="@color/colorPrimary"
            app:fabCustomSize="@dimen/fab_size"
            app:maxImageSize="@dimen/fab_image_size" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profileValidateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/icon_check"
            android:tint="@color/colorPrimary"
            app:fabCustomSize="@dimen/fab_size"
            app:maxImageSize="@dimen/fab_image_size" />
    </LinearLayout>

</RelativeLayout>